--- a/app/beta/confirmation/0/index.html
+++ b/app/beta/confirmation/0/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class="fadein single" id="dark">
+<body class="easein single" id="dark">
 
   <nav>
     <ul class="page single">
