--- a/app/beta/ios-ipados/index.html
+++ b/app/beta/ios-ipados/index.html
@@ -59,7 +59,7 @@
           </div>
 
           <div class="clear-top">
-            <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-tjjtet-tjjtet" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value=='E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" class="required email trim" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
+            <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-tjjtet-tjjtet" required="" type="email" placeholder="E-mail address&nbsp;&#92;&nbsp;Addresse e-mail" onfocus="if (this.value=='E-mail address&nbsp;&#92;&nbsp;Addresse e-mail') this.value = ''" class="required email matte-thin" title="E-mail address required. &#92;&nbsp;Adresse e-mail requis.">
             <button type="submit">Register<font class="fr">&nbsp;&#92;&nbsp;Enregistrez</font></button>
 
           </div>
