--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -54,7 +54,7 @@
   <section>
     <article>
 
-      <ul class="type-product polyptych">
+      <ul class="product polyptych">
         <li class="product-thumbnail">
 
           <a href="last-of-the-big-tuskers/">
@@ -64,9 +64,9 @@
             </div>
           </a>
 
-          <a href="last-of-the-big-tuskers/"><h5 class="woo-title">Magnificent Seven</h5></a>
-          <h5 class="woo-description">Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7</h5>
-          <h5 class="woo-tag"><i>Last of the Big Tuskers</i></h5>
+          <a href="last-of-the-big-tuskers/"><h5 class="product-title">Magnificent Seven</h5></a>
+          <h5 class="product-description">Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7</h5>
+          <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
         </li>
 
