--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -52,7 +52,7 @@
   <section>
     <article>
 
-      <ul class="type-product polyptych">
+      <ul class="product polyptych">
         <li class="post-1510 product-thumbnail">
 
           <a href="isilo/">
@@ -62,9 +62,9 @@
             </div>
           </a>
 
-          <a href="isilo/"><h5 class="woo-title">Isilo</h5></a>
-          <h5 class="woo-description">Tembe Elephant Park, South Africa</h5>
-          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <a href="isilo/"><h5 class="product-title">Isilo</h5></a>
+          <h5 class="product-description">Tembe Elephant Park, South Africa</h5>
+          <h5 class="product-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -73,9 +73,9 @@
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Kamboyo [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" />
             </div></a>
-          <a href="kamboyo/"><h5 class="woo-title">Kamboyo</h5></a>
-          <h5 class="woo-description">Tsavo Conservation Area, Kenya</h5>
-          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <a href="kamboyo/"><h5 class="product-title">Kamboyo</h5></a>
+          <h5 class="product-description">Tsavo Conservation Area, Kenya</h5>
+          <h5 class="product-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <!-- <li class="post-1507 product-thumbnail">
@@ -83,9 +83,9 @@
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; Masthulele [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" />
             </div></a>
-          <a href="masthulele/"><h5 class="woo-title">Masthulele</h5></a>
-          <h5 class="woo-description">Kruger National Park, South Africa</h5>
-          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <a href="masthulele/"><h5 class="product-title">Masthulele</h5></a>
+          <h5 class="product-description">Kruger National Park, South Africa</h5>
+          <h5 class="product-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <!-- <li class="post-1508 product-thumbnail">
@@ -93,9 +93,9 @@
             <div class="clear">
               <img alt="Last of the Big Tuskers (2018) &ndash; One Ton [thumbnail]" src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" />
             </div></a>
-          <a href="one-ton/"><h5 class="woo-title">One Ton</h5></a>
-          <h5 class="woo-description">Chyulu Hills National Park, Kenya</h5>
-          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <a href="one-ton/"><h5 class="product-title">One Ton</h5></a>
+          <h5 class="product-description">Chyulu Hills National Park, Kenya</h5>
+          <h5 class="product-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
         </li> -->
 
         <li class="post-1506 product-thumbnail">
@@ -107,9 +107,9 @@
             </div>
           </a>
 
-          <a href="satao/"><h5 class="woo-title">Satao</h5></a>
-          <h5 class="woo-description">Tsavo East National Park, Kenya</h5>
-          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <a href="satao/"><h5 class="product-title">Satao</h5></a>
+          <h5 class="product-description">Tsavo East National Park, Kenya</h5>
+          <h5 class="product-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -127,9 +127,9 @@
             </div>
           </a>
 
-          <a href="tim-and-craig/"><h5 class="woo-title">Tim &amp; Craig</h5></a>
-          <h5 class="woo-description">Amboseli National Park, Kenya</h5>
-          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <a href="tim-and-craig/"><h5 class="product-title">Tim &amp; Craig</h5></a>
+          <h5 class="product-description">Amboseli National Park, Kenya</h5>
+          <h5 class="product-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li>
 
@@ -142,9 +142,9 @@
             </div>
           </a>
 
-          <a href="craig/"><h5 class="woo-title">Craig</h5></a>
-          <h5 class="woo-description">Amboseli National Park, Kenya</h5>
-          <h5 class="woo-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
+          <a href="craig/"><h5 class="product-title">Craig</h5></a>
+          <h5 class="product-description">Amboseli National Park, Kenya</h5>
+          <h5 class="product-tag"><i>Last of the Big Tuskers</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Last of the Big Tuskers (2018)">1</a>]</sup></h5>
 
         </li> -->
 
