--- a/scene/one/book-of-ella-4/index.html
+++ b/scene/one/book-of-ella-4/index.html
@@ -109,12 +109,12 @@
       </div>
 
       <div class="clear">
-        <img class="trim" alt="White Elephant color study: &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.color.jpg" />
+        <img class="matte-thin" alt="White Elephant color study: &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.color.jpg" />
         <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; color study (2015)</p>
 
       </div>
 
-      <!-- <img class="trim" alt="White Elephant color study: panorama. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.color.panorama.jpg" />
+      <!-- <img class="matte-thin" alt="White Elephant color study: panorama. (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.color.panorama.jpg" />
       <p class="text-right gutter-side"><i>White Elephant</i> color study: Panorama. (2015)</p> -->
 
       <div>
@@ -127,7 +127,7 @@
       </div>
 
       <div class="clear">
-        <img class="trim" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
+        <img class="matte-thin" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
         <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (2015)</p>
 
       </div>
@@ -159,7 +159,7 @@
 
             <div class="clear-top"><input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name" placeholder="Name" onfocus="if (this.value=='Name') this.value = ''"></div>
 
-            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email trim" title="E-mail address required."><button type="submit">Register</button></div>
+            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email matte-thin" title="E-mail address required."><button type="submit">Register</button></div>
 
           </form>
 
