--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -74,7 +74,7 @@
             </div> -->
 
             <div class="clear">
-              <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-jktktkh-jktktkh" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email trim" title="E-mail address required.">
+              <input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-jktktkh-jktktkh" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email matte-thin" title="E-mail address required.">
               <button type="submit">Request PDF</button>
             </div>
 
@@ -438,7 +438,7 @@
 
             <div class="clear-top"><input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name" placeholder="Name" onfocus="if (this.value=='Name') this.value = ''"></div>
 
-            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email trim" title="E-mail address required."><button type="submit">Register</button></div>
+            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email matte-thin" title="E-mail address required."><button type="submit">Register</button></div>
 
           </form>
 
