--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -72,7 +72,7 @@
 
       </div>
 
-      <img class="trim" alt="White Elephant sketch: &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.sketch.jpg" />
+      <img class="matte-thin" alt="White Elephant sketch: &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.sketch.jpg" />
       <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (pencil, 2015)</p>
 
       <div>
@@ -80,7 +80,7 @@
 
       </div>
 
-      <img class="trim" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
+      <img class="matte-thin" alt="White Elephant &lsquo;Ella after the storm.&rsquo; (2015) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.jpg" />
       <p class="text-right gutter-side">&ldquo;Ella after the storm.&rdquo; (digital paint, 2015)</p>
 
       <!-- <div>
@@ -90,7 +90,7 @@
 
       </div> -->
 
-      <!-- <img class="trim" alt="White Elephant render: &lsquo;Ella after the storm.&rsquo; (2019) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.render.jpg" /> -->
+      <!-- <img class="matte-thin" alt="White Elephant render: &lsquo;Ella after the storm.&rsquo; (2019) &copy; Animat Habitat" src="../../../inc/img/01/we.ella-after-the-storm.render.jpg" /> -->
       <!-- <div class="matte"><h4 class="color">Image coming soon.</h4></div>
       <p class="text-right gutter-side lineend">&ldquo;Ella after the storm.&rdquo; (digital image, 2019)</p> -->
 
@@ -111,7 +111,7 @@
 
             <div class="clear-top"><input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name" placeholder="Name" onfocus="if (this.value=='Name') this.value = ''"></div>
 
-            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email trim" title="E-mail address required."><button type="submit">Register</button></div>
+            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email matte-thin" title="E-mail address required."><button type="submit">Register</button></div>
 
           </form>
 
