--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -51,7 +51,7 @@
       <section class="single">
         <div class="text-center">
           <div>
-            <img alt="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro. White Rhino oil painting. &ndash;&nbsp;peinture &agrave; l'huile. &copy; Dane Aleksander, 2007" class="trim" src="../../inc/img/boutique/00/white-rhino.2007.480-160.jpg" />
+            <img alt="Animat Habitat scene zero. &ndash;&nbsp;sc&egrave;ne z&eacute;ro. White Rhino oil painting. &ndash;&nbsp;peinture &agrave; l'huile. &copy; Dane Aleksander, 2007" class="matte-thin" src="../../inc/img/boutique/00/white-rhino.2007.480-160.jpg" />
 
           </div>
           <p><i>White Rhino</i>, Ngorongoro Conservation Area<font class="fr">&nbsp;&#92;&nbsp;Zone de conservation de Ngorongoro</font>, Tanzania<font class="fr">&nbsp;&#92;&nbsp;Tanzanie</font> (oil paint<font class="fr">&nbsp;&#92;&nbsp;peinture &agrave; l'huile</font>, 2007) &copy; Dane Aleksander</p>
