--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -374,12 +374,12 @@
 
       <div class="clear diptych">
         <div class="clear-bottom">
-          <img alt="" src="https://animathabitat.com/inc/img/~01/art/~angela-sheldrick/water-colour.2018.10.jpg" class="trim">
+          <img alt="" src="https://animathabitat.com/inc/img/~01/art/~angela-sheldrick/water-colour.2018.10.jpg" class="matte-thin">
           <p class="text-right">Angela Sheldrick Water Colour, October 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
         <div class="clear-bottom">
-          <img alt="" src="https://animathabitat.com/inc/img/~01/art/~angela-sheldrick/water-colour.2018.11.jpg" class="trim">
+          <img alt="" src="https://animathabitat.com/inc/img/~01/art/~angela-sheldrick/water-colour.2018.11.jpg" class="matte-thin">
           <p class="text-right">Angela Sheldrick Water Colour, November 2018 &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust-water-colours/" target="_blank" title="Sheldrick Wildlife Trust / Water Colours">sheldrickwildlifetrust.org</a>]</p>
         </div>
 
@@ -429,7 +429,7 @@
 
             <div class="clear-top"><input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name" placeholder="Name" onfocus="if (this.value=='Name') this.value = ''"></div>
 
-            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email trim" title="E-mail address required."><button type="submit">Register</button></div>
+            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" class="required email matte-thin" title="E-mail address required."><button type="submit">Register</button></div>
 
           </form>
 
