--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; style-src fonts.googleapis.com 'self';" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; style-src fonts.googleapis.com 'self';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="company" content="Animat Habitat" />
@@ -51,6 +51,10 @@
 
         <pre class="thin"></pre>
 
+        <!-- <h5 class="linebreak lineend">Thanks for supporting wildlife art with your Order from Animat Habitat boutique.</h5>
+
+        <pre class="thin"></pre> -->
+
         <h3 class="linebreak">Terms of Purchase</h3>
         <p>By placing an Order at Animat Boutique, or by receiving delivery of any Order by Purchaser from Animat Boutique, Purchaser accepts these terms and conditions, and shall be deemed to have made an offer to purchase Art itemized in Order from Animat Boutique pursuant to this Agreement. The acceptance and fulfillment by Animat Boutique of any Order placed at Animat Boutique is subject to Purchaser acceptance of all of the terms of this Agreement. Animat Boutique shall not be deemed to have accepted Purchaser offer to purchase unless and until Animat Boutique sends to Purchaser, through electronic means, facsimile or other written communication, an acknowledgment that Purchaser Order has been confirmed and will be fulfilled by Animat Boutique. Animat Boutique acceptance of any offer to purchase by Purchaser is only made with the express understanding that this Agreement shall govern any Order through Animat Boutique to Purchaser.</p>
 
@@ -83,14 +87,14 @@
         <p class="linebreak">Delivery is limited to the following listed nations.</p>
 
         <div>
-          <h5 class="title">Europe</h5>
+          <p class="title">Europe</p>
           <ul class="square">
             <li>France</li>
             <li>United Kingdom</li>
 
           </ul>
 
-          <h5 class="linebreak title">North America</h5>
+          <p class="linebreak title">North America</p>
           <ul class="square">
             <li>Canada</li>
             <li>United States of America</li>
@@ -143,7 +147,6 @@
 
         <p class="linebreak"><i>Terms may be updated without notice; use of the version validated at the time of Order may continue to apply to past purchase(s).</i></p>
 
-        <h5 class="linebreak">Thanks for supporting wildlife art with your Order from Animat Habitat boutique.</h5>
       </div>
 
     </article><br class="clear">
