--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -33,7 +33,7 @@
 
   <header>
     <div class="quote text-center">
-      <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="clear">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
+      <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
       <h3>Gicl&eacute;e Prints<font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></h3>
 
     </div>
