--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <header>
     <div class="quote text-center">
-      <h1 class="title"><font class="clear">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
+      <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>Art for the conservation of endangered species and their natural habitats.<font class="fr"> <br>Art pour la conservation des esp&egrave;ces en p&eacute;ril et de leurs habitats naturels.</font></h3>
 
     </div>
