--- a/patron/index.html
+++ b/patron/index.html
@@ -42,7 +42,7 @@
 
   <header>
     <div class="quote text-center">
-      <h1 class="title"><font class="clear">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
+      <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>Patrons of the scenes in wildlife art.<font class="fr">&nbsp;&#92;&nbsp;Patrons des sc&egrave;nes d'art de la nature.</font></h3>
 
     </div>
