--- a/scene/one/book-of-ella-4/index.html
+++ b/scene/one/book-of-ella-4/index.html
@@ -166,7 +166,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-kenya/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Kenya /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../making-of-ella-3/" rel="next"><font class="toggle-form-full">/ Making of Ella Ch&nbsp;3</font><font class="toggle-form-break">/ Next Article</font></a>
