--- a/scene/one/companion-app-augmented-reality/index.html
+++ b/scene/one/companion-app-augmented-reality/index.html
@@ -128,7 +128,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../making-of-ella/" rel="prev"><font class="toggle-form-full">Making of Ella Ch&nbsp;1 /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-africa/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Africa</font><font class="toggle-form-break">/ Next Article</font></a>
