--- a/scene/one/companion-app-beta/index.html
+++ b/scene/one/companion-app-beta/index.html
@@ -100,7 +100,7 @@
 
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../companion-app-augmented-reality-kit/" rel="prev"><font class="toggle-form-full">Augmented Reality Kit /</font><font class="toggle-form-break">Previous Article /</font></a>
           <!-- <a class="nav-next" href="../companion-app-soundtrack/" rel="next"><font class="toggle-form-full">/ Companion App &ndash; Soundtrack</font><font class="toggle-form-break">/ Next Article</font></a> -->
