--- a/scene/one/elephant-conservation-namibia/index.html
+++ b/scene/one/elephant-conservation-namibia/index.html
@@ -47,7 +47,7 @@
         <p>Article in review.</p>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-botswana/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Botswana /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-kavango/" rel="next"><font class="toggle-form-full">/ Reconnaissance in Kavango</font><font class="toggle-form-break">/ Next Article</font></a>
