--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -243,7 +243,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../wildlife-documentary-lens/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Cameras /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../history-of-elephants-charter/" rel="next"><font class="toggle-form-full">/ A History of Elephants &ndash; Charter</font><font class="toggle-form-break">/ Next Article</font></a>
