--- a/scene/one/history-of-elephants-charter/index.html
+++ b/scene/one/history-of-elephants-charter/index.html
@@ -308,7 +308,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../history-of-elephants-anatomy/" rel="prev"><font class="toggle-form-full">A History of Elephants &ndash; Anatomy /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../wildlife-documentary/" rel="next"><font class="toggle-form-full">/ Wildlife Documentary &ndash; Action</font><font class="toggle-form-break">/ Next Article</font></a>
