--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -445,7 +445,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../book-of-ella-3/" rel="prev"><font class="toggle-form-full">Book of Ella Ch&nbsp;3 /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../making-of-ella-2/" rel="next"><font class="toggle-form-full">/ Making of Ella Ch&nbsp;2</font><font class="toggle-form-break">/ Next Article</font></a>
