--- a/scene/one/making-of-ella-4/index.html
+++ b/scene/one/making-of-ella-4/index.html
@@ -48,7 +48,7 @@
 
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-angola/" rel="prev"><font class="toggle-form-full">Ghost Elephants in Angola /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../companion-app-augmented-reality-kit/" rel="next"><font class="toggle-form-full">/ Augmented Reality Kit</font><font class="toggle-form-break">/ Next Article</font></a>
