--- a/scene/one/making-of-ella/index.html
+++ b/scene/one/making-of-ella/index.html
@@ -122,7 +122,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-next" href="../companion-app-augmented-reality/" rel="next"><font class="toggle-form-break">/ Next Article</font><font class="toggle-form-full">/ Augmented Reality Application</font></a>
         </div>
