--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -187,7 +187,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-africa/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Africa /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../reference-art-2/" rel="next"><font class="toggle-form-full">/ Reference Art &ndash; Imagery</font><font class="toggle-form-break">/ Next Article</font></a>
