--- a/scene/one/wildlife-documentary-lens/index.html
+++ b/scene/one/wildlife-documentary-lens/index.html
@@ -354,7 +354,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../history-of-elephants/" rel="prev"><font class="toggle-form-full">A History of Elephants &ndash; Preface /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../history-of-elephants-anatomy/" rel="next"><font class="toggle-form-full">/ A History of Elephants &ndash; Anatomy</font><font class="toggle-form-break">/ Next Article</font></a>
