--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -262,7 +262,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <!-- <a class="nav-previous" href="../technology-lens/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Picture /</font><font class="toggle-form-break">Previous Article /</font></a> -->
           <a class="nav-next" href="../the-beginning-of-chapter-two/" rel="next"><font class="toggle-form-full">/ The Beginning of Chapter Two</font><font class="toggle-form-break">/ Next Article</font></a>
