--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -42,7 +42,7 @@
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
       <h3>Scene zero:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne z&egrave;ro&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Rhino</font></a></h1>
-      <h3><font class="clear">Oil painting of a red horizon.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un horizon en flammes.</font></h3>
+      <h3><font class="color-reset">Oil painting of a red horizon.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un horizon en flammes.</font></h3>
     </div>
   </header>
 
@@ -72,7 +72,7 @@
     </section>
   </div>
 
-  <div class="clear color">
+  <div class="clear-alt color">
 
     <section class="product single" id="scene">
 
