--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -135,7 +135,7 @@
 
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../../../url/git/danealeksander-art-international-baccalaureate/" rel="prev"><font class="toggle-form-full">International Baccalaureate Art Show /</font><font class="toggle-form-break">Previous Article /</font></a>
           <!-- <a class="nav-next" href="..//" rel="next"><font class="toggle-form-full">/ </font><font class="toggle-form-break">/ Next Article</font></a> -->
