--- a/boutique/index.html
+++ b/boutique/index.html
@@ -40,7 +40,7 @@
 
   <header>
     <div class="quote text-center">
-      <h1 class="title"><font class="clear">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
+      <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>
         <a href="medium/digital-numerique/" title="Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques."><font class="overscore">Digital Editions</font></a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;riques</font>
          &middot; <a href="medium/giclee/" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es."><font class="overscore">Gicl&eacute;e Prints</font></a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font>
