--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -34,7 +34,7 @@
   <header>
 
     <div class="quote text-center">
-      <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="clear">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
+      <h1 class="title"><a href="../../" title="Animat Habitat boutique."><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></a></h1>
       <h3>Digital Editions<font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></h3>
 
     </div>
