--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -208,7 +208,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
         <a class="nav-previous" href="../book-of-ella/" rel="prev"><font class="toggle-form-full">Book of Ella Ch&nbsp;1 /</font><font class="toggle-form-break">Previous Article /</font></a>
         <a class="nav-next" href="../book-of-ella-3/" rel="next"><font class="toggle-form-full">/ Book of Ella Ch&nbsp;3</font><font class="toggle-form-break">/ Next Article</font></a>
