--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -143,7 +143,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../reference-art-2/" rel="prev"><font class="toggle-form-full">Reference Art &ndash; Imagery /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../book-of-ella-2/" rel="next"><font class="toggle-form-full">/ Book of Ella Ch&nbsp;2</font><font class="toggle-form-break">/ Next Article</font></a>
