--- a/scene/one/companion-app-augmented-reality-kit/index.html
+++ b/scene/one/companion-app-augmented-reality-kit/index.html
@@ -51,7 +51,7 @@
 
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../making-of-ella-4/" rel="prev"><font class="toggle-form-full">Making of Ella Ch&nbsp;4 /</font><font class="toggle-form-break">Previous Article /</font></a>
           <!-- <a class="nav-next" href="../companion-app-beta/" rel="next"><font class="toggle-form-full">/ Companion App &ndash;&nbsp;Beta</font><font class="toggle-form-break">/ Next Article</font></a> -->
