--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -158,7 +158,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../companion-app-augmented-reality/" rel="prev"><font class="toggle-form-full">Augmented Reality Application /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../reference-art/" rel="next"><font class="toggle-form-full">/ Reference Art &ndash; History</font><font class="toggle-form-break">/ Next Article</font></a>
