--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -201,7 +201,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-nairobi/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Nairobi /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../wildlife-documentary-2/" rel="next"><font class="toggle-form-full">/ Wildlife Documentary &ndash; Lights</font><font class="toggle-form-break">/ Next Article</font></a>
