--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -285,7 +285,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-kavango/" rel="prev"><font class="toggle-form-full">Reconnaissance in Kavango /</font><font class="toggle-form-break">Previous Article /</font></a>
           <!-- <a class="nav-next" href="../making-of-ella-4/" rel="next"><font class="toggle-form-full">Making of Ella Ch&nbsp;4 /</font><font class="toggle-form-break">Next Article /</font></a> -->
