--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -243,7 +243,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../wildlife-documentary-2/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Lights /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-namibia/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Namibia</font><font class="toggle-form-break">/ Next Article</font></a>
