--- a/scene/one/elephant-conservation-kavango/index.html
+++ b/scene/one/elephant-conservation-kavango/index.html
@@ -55,7 +55,7 @@
 
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-zambezi/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Zambezi /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-angola/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Angola</font><font class="toggle-form-break">/ Next Article</font></a>
