--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -196,7 +196,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../making-of-ella-2/" rel="prev"><font class="toggle-form-full">Making of Ella Ch&nbsp;2 /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../book-of-ella-4/" rel="next"><font class="toggle-form-full">/ Book of Ella Ch&nbsp;4</font><font class="toggle-form-break">/ Next Article</font></a>
