--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -436,7 +436,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../wildlife-documentary-big-tuskers/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Feature /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-amboseli/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Amboseli</font><font class="toggle-form-break">/ Next Article</font></a>
