--- a/scene/one/elephant-conservation-zambezi/index.html
+++ b/scene/one/elephant-conservation-zambezi/index.html
@@ -49,7 +49,7 @@
 
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-namibia/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Namibia /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-kavango/" rel="next"><font class="toggle-form-full">/ Reconnaissance in Kavango</font><font class="toggle-form-break">/ Next Article</font></a>
