--- a/scene/one/history-of-elephants/index.html
+++ b/scene/one/history-of-elephants/index.html
@@ -187,7 +187,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../making-of-ella-3/" rel="prev"><font class="toggle-form-full">Making of Ella Ch&nbsp;3 /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../wildlife-documentary-lens/" rel="next"><font class="toggle-form-full">/ Wildlife Documentary &ndash; Cameras</font><font class="toggle-form-break">/ Next Article</font></a>
