--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -46,7 +46,7 @@
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
       <h3>Scene one:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Elephant</font></a></h1>
-      <h3><font class="clear">Comic book and companion app to change the way we look at wildlife.<font class="fr"><br>Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
+      <h3><font class="color-reset">Comic book and companion app to change the way we look at wildlife.<font class="fr"><br>Une bande dessin&eacute;e et l’app qui l’accompagne pour changer la fa&ccedil;on dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
 
@@ -73,7 +73,7 @@
     </section>
   </div>
 
-  <div class="clear color">
+  <div class="clear-alt color">
 
     <section class="product single" id="scene">
 
