--- a/scene/one/making-of-ella-2/index.html
+++ b/scene/one/making-of-ella-2/index.html
@@ -81,7 +81,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../history-of-elephants-ivory/" rel="prev"><font class="toggle-form-full">A History of Elephants &ndash; Ivory /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-kenya/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Kenya</font><font class="toggle-form-break">/ Next Article</font></a>
