--- a/scene/one/making-of-ella-3/index.html
+++ b/scene/one/making-of-ella-3/index.html
@@ -118,7 +118,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../book-of-ella-4/" rel="prev"><font class="toggle-form-full">Book of Ella Ch&nbsp;4 /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../history-of-elephants/" rel="next"><font class="toggle-form-full">/ A History of Elephants &ndash; Preface</font><font class="toggle-form-break">/ Next Article</font></a>
