--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -161,7 +161,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../reference-art/" rel="prev"><font class="toggle-form-full">Reference Art &ndash; History /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../book-of-ella/" rel="next"><font class="toggle-form-full">/ Book of Ella Ch&nbsp;1</font><font class="toggle-form-break">/ Next Article</font></a>
