--- a/scene/one/wildlife-documentary-2/index.html
+++ b/scene/one/wildlife-documentary-2/index.html
@@ -157,7 +157,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../elephant-conservation-amboseli/" rel="prev"><font class="toggle-form-full">Elephant Conservation in Amboseli /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-botswana/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Botswana</font><font class="toggle-form-break">/ Next Article</font></a>
