--- a/scene/one/wildlife-documentary-big-tuskers/index.html
+++ b/scene/one/wildlife-documentary-big-tuskers/index.html
@@ -133,7 +133,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../wildlife-documentary/" rel="prev"><font class="toggle-form-full">Wildlife Documentary &ndash; Action /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../elephant-conservation-nairobi/" rel="next"><font class="toggle-form-full">/ Elephant Conservation in Nairobi</font><font class="toggle-form-break">/ Next Article</font></a>
