--- a/scene/two/history-of-the-forest-and-the-trees/index.html
+++ b/scene/two/history-of-the-forest-and-the-trees/index.html
@@ -333,7 +333,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../siberian-tiger-project/" rel="prev"><font class="toggle-form-full">Tiger Conservation in Siberia /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../the-beginning-of-exhibiting/" rel="next"><font class="toggle-form-full">/ The Beginning of Exhibiting</font><font class="toggle-form-break">/ Next Article</font></a>
