--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -47,7 +47,7 @@
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
       <h3>Scene two:<font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux&nbsp;:</font></h3>
       <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Tiger</font></a></h1>
-      <h3><font class="clear">Oil painting of an Amur tiger in the taiga.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un tigre de Sib&eacute;rie dans la ta&iuml;ga.</font></h3>
+      <h3><font class="color-reset">Oil painting of an Amur tiger in the taiga.</font><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l’huile d’un tigre de Sib&eacute;rie dans la ta&iuml;ga.</font></h3>
     </div>
   </header>
 
@@ -75,7 +75,7 @@
     </section>
   </div>
 
-  <div class="clear color">
+  <div class="clear-alt color">
 
     <section class="product single" id="scene">
 
