--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -183,7 +183,7 @@
         </div>
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
           <a class="nav-previous" href="../the-beginning-of-painting/" rel="prev"><font class="toggle-form-full">The Beginning of Painting /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../tiger-conservation-siberia/" rel="next"><font class="toggle-form-full">/ Tiger Conservation in Siberia</font><font class="toggle-form-break">/ Next Article</font></a>
