--- a/society/index.html
+++ b/society/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <meta http-equiv="refresh" content="0; url=https://animathabitat.ca/societas/" />
+  <meta http-equiv="refresh" content="0; url=https://societas.animathabitat.org" />
 
 </head>
 </html>
