--- a/scene/two/tiger-conservation-siberia/index.html
+++ b/scene/two/tiger-conservation-siberia/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline' createsend.com www.createsend.com js.createsend1.com; style-src fonts.googleapis.com 'self';" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src createsend.com js.createsend1.com 'unsafe-inline'; style-src fonts.googleapis.com 'self';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb scene-two logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
-      <li class="crumb btn scene-two"><a href="../" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li>
-      <li class="crumb scene scene-two"><a><em>Tiger Conservation in Siberia</em></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li>
+      <li class="crumb scene color"><a><i>Tiger Conservation in Siberia</i></a></li>
     </ul>
   </nav>
 
@@ -38,7 +38,7 @@
     <article>
       <div>
         <h4 class="letterhead thin">March 2022</h4>
-        <h2 class="scene-two">Siberian Tiger Project</h2>
+        <h2 class="color">Siberian Tiger Project</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
       </div>
@@ -49,10 +49,10 @@
 
       </div>
 
-      <div class="clear navigation post-navigation" role="navigation">
+      <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../the-second-chapter/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">The Second Chapter /</font></a>
-          <a class="nav-next" href="../history-of-the-forest-and-the-trees/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ The Forest Behind the Trees</font></a>
+          <a class="nav-previous" href="../the-beginning-of-chapter-two/" rel="prev"><font class="toggle-form-full">The Beginning of Chapter Two /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-next" href="../history-of-the-forest-and-the-trees/" rel="next"><font class="toggle-form-full">/ The Forest Behind the Trees</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
 
