--- a/societas/index.html
+++ b/societas/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <meta http-equiv="refresh" content="0; url=https://s.animathabitat.org" />
+  <meta http-equiv="refresh" content="0; url=https://animathabitat.ca/org/societas/" />
 
 </head>
 </html>
