--- a/societe/index.html
+++ b/societe/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <meta http-equiv="refresh" content="0; url=https://animathabitat.ca/~/" />
+  <meta http-equiv="refresh" content="0; url=https://s.animathabitat.org" />
 
 </head>
 </html>
